syntax ="proto3";

package pb;

option go_package="pb/";

message User{
    int64 id=1;
    string name=2;
}
message GetUserRequest{
    repeated int64 id=1;
}
message GetUserResponse{
    repeated User user=1;
} 
message GetUsersRequest {
    repeated int64 ids=1;
}
message GetUsersResponse{
    repeated User users=1;
}
service UserService{
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc GetUsers(GetUsersRequest) returns(GetUsersResponse);
}